# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.70"
description = "Dogma.rs"
#documentation = "https://docs.rs/dogma/"
readme = true
homepage = "https://github.com/dogmatists/dogma.rs"
repository = "https://github.com/dogmatists/dogma.rs"
license = "Unlicense"
keywords = []
categories = ["no-std"]
publish = true

[workspace.dependencies]
dogma = { path = "lib/dogma" }

[patch.crates-io]
dogma = { path = "lib/dogma" }
