# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.1.5"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.70"
description = "Provides `Named`, `MaybeNamed`, `Labeled`, `MaybeLabeled`, `Collection`, and `CollectionMut` traits."
#documentation = "https://docs.rs/dogma/"
readme = true
homepage = "https://github.com/dogmatists/dogma.rs"
repository = "https://github.com/dogmatists/dogma.rs"
license = "Unlicense"
keywords = []
categories = ["data-structures", "rust-patterns", "no-std"]
publish = true

[workspace.dependencies]
dogma = { path = "lib/dogma" }

[patch.crates-io]
dogma = { path = "lib/dogma" }
