[package]
name = "dogma"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["enums", "serde", "structs", "traits"]
std = ["iri-string/std"]
unstable = []

# Enums:
enums = ["iri", "uri"]
iri = []
uri = ["iri"]

# Structs:
structs = []

# Traits:
traits = ["collection", "countable", "labeled", "named"]
collection = []
countable = []
labeled = []
named = []

# Integrations:
serde = ["dep:serde", "iri-string/serde"]

[dependencies]
iri-string = { version = "0.7", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, optional = true }
stability = "0.2"
